c3prj1_deck/grade.txt
Grading at Sun Jan 24 21:07:02 UTC 2021
Compiling deck.c
deck.c: In function ‘print_hand’:
deck.c:10:16: error: incompatible type for argument 1 of ‘print_card’
     print_card(p);
                ^
In file included from deck.h:4:0,
                 from deck.c:4:
cards.h:36:6: note: expected ‘card_t {aka struct card_tag}’ but argument is of type ‘card_t * {aka struct card_tag *}’
 void print_card(card_t c);
      ^
Could not compile your deck.c!

Overall Grade: FAILED
